--- a/styles/style.css
+++ b/styles/style.css
@@ -11,8 +11,8 @@ body {
   font-weight: 400;
   font-style: normal;
   background-color: #87ceeb;
-  overflow: hidden;
   transition: all 2s ease-in;
+  overflow: clip;
 }
 
 .clouds {
