--- a/styles/style.css
+++ b/styles/style.css
@@ -12,7 +12,7 @@ body {
   font-style: normal;
   background-color: #87ceeb;
   transition: all 2s ease-in;
-  overflow: clip;
+  overflow-y: clip;
 }
 
 .clouds {
