--- a/styles/style.scss
+++ b/styles/style.scss
@@ -10,7 +10,7 @@ body {
   font-style: normal;
   background-color: #87ceeb;
   transition: all 2s ease-in;
-  overflow: clip;
+  overflow-y: clip;
 }
 .clouds {
   width: 100%;
