--- a/styles/style.css
+++ b/styles/style.css
@@ -12,8 +12,7 @@ body {
   font-style: normal;
   background-color: #87ceeb;
   transition: all 2s ease-in;
-  overflow-y: hidden;
-  overflow-x: clip;
+  overflow: hidden;
 }
 
 .clouds {
@@ -497,7 +496,7 @@ body {
   height: 100%;
 }
 .page .content .house_page {
-  min-width: 1300px;
+  min-width: 1500px;
   z-index: 300;
   height: 100%;
   position: relative;
@@ -537,7 +536,7 @@ body {
 }
 .page .content .final_page {
   position: relative;
-  min-width: 30vw;
+  min-width: 500px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -657,7 +656,7 @@ body {
   width: 200px;
   height: 200px;
   position: fixed;
-  transform: translateX(-50%);
+  transform: translatex(-50%);
   left: 50%;
   bottom: 20%;
 }
