--- a/styles/style.scss
+++ b/styles/style.scss
@@ -262,6 +262,7 @@ body {
           padding: 1.5rem;
           line-height: 2;
           letter-spacing: 1px;
+          font-size: 1.5rem;
         }
         .pole {
           margin: auto;
@@ -337,7 +338,7 @@ body {
           .leave_top {
             transition: all 0.5s ease-in;
             margin: auto;
-            width: 400px;
+            width: 600px;
             height: 0px; //100px
             background: url(../image/leaves.png);
           }
@@ -383,6 +384,7 @@ body {
                   transform: translate(-50%, -50%);
                   left: 50%;
                   top: 50%;
+                  font-size: 1.25rem;
                 }
               }
             }
@@ -390,7 +392,7 @@ body {
           .leave_bottom {
             transition: all 0.25s ease-in;
             margin: auto;
-            width: 400px;
+            width: 600px;
             height: 0px; //100px
             background: url(../image/leaves.png);
           }
@@ -539,6 +541,8 @@ body {
         bottom: 25px;
         transform: translateX(-50%);
         left: 50%;
+        background-size: contain;
+        background-repeat: no-repeat;
         .bed {
           width: 186px;
           height: 94px;
@@ -563,6 +567,7 @@ body {
         transform: translateX(-50%);
         left: 50%;
         bottom: 0;
+        background-size: contain;
       }
     }
     //contact
@@ -580,6 +585,7 @@ body {
       .contact_mail {
         display: flex;
         flex-direction: row;
+        padding: 1rem 0;
         .mail {
           width: 100px;
           height: 100px;
@@ -686,7 +692,7 @@ body {
 //人物
 
 .my {
-  z-index: 60;
+  z-index: 30;
   overflow: hidden;
   width: 200px;
   height: 200px;
@@ -744,5 +750,105 @@ body {
     width: 50px;
     height: 25px;
     margin: auto;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .cloud {
+  }
+  .clouds .sun,
+  .clouds .moon {
+    top: 3%;
+    width: 90px;
+    height: 90px;
+  }
+  .page_title .Kanban_main .Kanban {
+    width: 100px;
+    height: 50px;
+  }
+  .page_title .Kanban_main .pole {
+    width: 10px;
+    height: 25px;
+  }
+  .page .content .about_page .about_content .Kanban {
+    width: 90vw;
+    height: 30vh;
+    font-size: 1rem;
+    line-height: 1.7;
+  }
+  .page .content .about_page .about_content .pole {
+    width: 20px;
+    height: 100px;
+  }
+  .page
+    .content
+    .skill_page
+    .skill_tree
+    .leaves
+    .leave_main
+    .leave_text
+    .apple {
+    width: 70px;
+    height: 60px;
+  }
+
+  .page
+    .content
+    .skill_page
+    .skill_tree
+    .leaves
+    .leave_main
+    .leave_text
+    .apple
+    .petiole {
+    width: 5px;
+    height: 20px;
+    transform: translate(40px, -10px) rotate(35deg);
+  }
+  .page .content .skill_page .skill_tree .leaves .leave_main {
+    width: 600px;
+  }
+  .page
+    .content
+    .skill_page
+    .skill_tree
+    .leaves
+    .leave_main
+    .leave_text
+    .apple
+    .text {
+    font-size: 1rem;
+  }
+  .page .content .project_page .contents .project {
+    justify-content: start;
+  }
+  .page .content .project_page .contents .project .img {
+    width: 450px;
+    height: 300px;
+  }
+  .page .content .house_page {
+    min-width: 1200px;
+  }
+  .page .content .house_page .house {
+    width: 800px;
+    height: 600px;
+  }
+  .page .content .house_page .house_floor {
+    width: 950px;
+  }
+  .page .content .final_page {
+    min-width: 360px;
+  }
+  .page .content .final_page .contact_mail .mail,
+  .page .content .final_page .github {
+    width: 60px;
+    height: 60px;
+  }
+  .page .content .final_page .contact_mail .account {
+    font-size: 1.25rem;
+  }
+  .page .content .final_page .contact_mail .account .copy {
+    width: 20px;
+    height: 20px;
   }
 }
