--- a/styles/style.css
+++ b/styles/style.css
@@ -149,6 +149,7 @@ body {
   width: 50px;
   height: 50px;
   position: relative;
+  cursor: pointer;
 }
 .progress_bar .progress_arrow div {
   width: 100%;
