--- a/styles/style.scss
+++ b/styles/style.scss
@@ -146,6 +146,7 @@ body {
     width: 50px;
     height: 50px;
     position: relative;
+    cursor: pointer;
     div {
       width: 100%;
       height: 2px;
