--- a/styles/style.css
+++ b/styles/style.css
@@ -644,8 +644,8 @@ body {
 .page .content .project_page .contents .project .img img {
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 .page .content .project_page .contents .project .pro_content {
   display: flex;
