--- a/styles/style.scss
+++ b/styles/style.scss
@@ -669,7 +669,7 @@ body {
             img {
               width: 100%;
               height: 100%;
-              object-fit: cover;
+              object-fit: contain;
             }
           }
           .pro_content {
